fixed spacing of the input as well as the size to match the button

--- a/ipreact/src/index.css
+++ b/ipreact/src/index.css
@@ -134,3 +134,9 @@ button:focus-visible {
   word-break: break-word;
 }
 
+.searches{
+  display: flex;
+}
+.searchInput{
+  flex:1;
+}
